# fingerprint-recognition-research

./: .gitattributes  .gitignore  README.md  ai_repo_structure.txt  environment.yml  pyproject.toml  write_ai_repo_structure_root.ps1
apps/sourceafis-sidecar/: pom.xml
docs/: benchmark_contract.md  deepprint_style_feasibility_v1.md  detector_only_joint_500_v1.md  detector_only_protocol.md  fingercode_gabor_aad_feasibility_v1.md  gftt_harris_rootsift_geometric_full_v1.md  harriszplus_clean_room.md  harriszplus_preflight_v1_failure_analysis.md  harriszplus_preflight_v2_failure_analysis.md  harriszplus_v4_ppi_aware_rationale.md  per_method_self_accept_then_plain_roll_protocol.md  ppi_normalized_phase_only_correlation_feasibility_v1.md  shared_biometric_accuracy_protocol.md  sift_geometric.md  sift_geometric_full.md  sift_per_dataset_self_accept_protocol.md  sourceafis_integration_v2.md  sourceafis_reproducibility_audit.md
protocols/detector_only_joint_500_v1/: impostor_pairing.csv  protocol_metadata.json  selected_identities.csv
protocols/sd300b/: plain_roll.csv  plain_self.csv  protocol_audit.json  roll_self.csv
protocols/sd300c/: plain_self.csv  protocol_audit.json  roll_self.csv
research/deepprint_style_preflight_v1/: checkpoint_manifest.json  environment_resolved.yml  external_source_manifest.json  pip_freeze.txt  preflight_contract.json  repeatability_report.json  smoke_cohort.json  smoke_report.json
research/fingercode_preflight_v1/: physical_scale_contract.json  preflight_contract.json  primary_source_manifest.json  reference_point_report.json  (+4 more)
scripts/: build_sourceafis_joint_self_accept_t40_v1.mjs  build_sourceafis_joint_self_positive_v1.mjs  run_sourceafis_reproducibility_audit.ps1  threshold40_audit.mjs
tests/: conftest.py  test_benchmark_diagnostics.py  test_benchmark_runner.py  test_canonical_fingers.py  test_derived_protocol.py  test_detector_only_hardening.py  test_detector_only_joint500.py  test_detector_only_protocol.py  test_gftt_harris_full.py  test_harriszplus_adapter_stack.py  test_harriszplus_coordinate_mapping.py  test_harriszplus_core.py  test_harriszplus_core_detector.py  test_harriszplus_orientation.py  test_harriszplus_pilot.py  test_harriszplus_pilot_v3.py  test_harriszplus_ppi_aware_v4.py  test_harriszplus_preflight_v2.py  test_harriszplus_preflight_v3.py  test_harriszplus_protected_artifacts.py  test_local_features.py  test_nist_sd300.py  test_opencv_gftt_harris_detector.py  test_plain_self_protocol.py  test_protocol_dataset.py  test_protocol_hardening.py  test_reproducibility_audit.py  test_sd300b_plain_roll.py  test_sd300b_plain_self.py  test_sd300b_protocol_audit.py  test_sd300b_roll_self.py  test_sd300c_protocols.py  test_self_manifest_common.py  test_shared_accuracy.py  test_shared_accuracy_integrity.py  test_shared_accuracy_metrics.py  test_sift_derived_protocol.py  test_sift_geometric_core.py  test_sift_geometric_development.py  test_sift_geometric_reporting.py  (+7 more)
(+527 files in other folders)
