[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fingerprint-recognition-research"
version = "0.1.0"
description = "Minimal NIST SD300b/SD300c data discovery utilities."
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
]

[project.scripts]
fingerprint-audit = "fingerprint_data_discovery.audit:main"
fingerprint-sd300b-plain-self = "fingerprint_data_discovery.sd300b_plain_self:main"
fingerprint-sd300b-roll-self = "fingerprint_data_discovery.sd300b_roll_self:main"
fingerprint-sd300b-plain-roll = "fingerprint_data_discovery.sd300b_plain_roll:main"
fingerprint-sd300b-protocol-audit = "fingerprint_data_discovery.sd300b_protocol_audit:main"
fingerprint-sd300c-plain-self = "fingerprint_data_discovery.sd300c_plain_self:main"
fingerprint-sd300c-roll-self = "fingerprint_data_discovery.sd300c_roll_self:main"
fingerprint-sd300c-plain-roll = "fingerprint_data_discovery.sd300c_plain_roll:main"
fingerprint-sd300c-protocol-audit = "fingerprint_data_discovery.sd300c_protocol_audit:main"
fingerprint-benchmark = "fingerprint_benchmark.cli:main"
fingerprint-repro-audit = "fingerprint_benchmark.reproducibility_audit:main"
fingerprint-sift-study = "fingerprint_benchmark.sift.study:main"
fingerprint-derived-sourceafis = "fingerprint_benchmark.derived_protocol:main"
fingerprint-derived-sift = "fingerprint_benchmark.sift_derived_protocol:main"
fingerprint-shared-accuracy = "fingerprint_benchmark.shared_accuracy:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
