[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fingerprint-recognition-research"
version = "0.1.0"
description = "Detector-only fingerprint research on NIST SD300b and SD300c."
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
]

[project.scripts]
fingerprint-audit = "fingerprint_data_discovery.audit:main"
fingerprint-sd300b-plain-self = "fingerprint_data_discovery.sd300b_plain_self:main"
fingerprint-sd300b-roll-self = "fingerprint_data_discovery.sd300b_roll_self:main"
fingerprint-sd300b-plain-roll = "fingerprint_data_discovery.sd300b_plain_roll:main"
fingerprint-sd300b-protocol-audit = "fingerprint_data_discovery.sd300b_protocol_audit:main"
fingerprint-sd300c-plain-self = "fingerprint_data_discovery.sd300c_plain_self:main"
fingerprint-sd300c-roll-self = "fingerprint_data_discovery.sd300c_roll_self:main"
fingerprint-sd300c-plain-roll = "fingerprint_data_discovery.sd300c_plain_roll:main"
fingerprint-sd300c-protocol-audit = "fingerprint_data_discovery.sd300c_protocol_audit:main"
fingerprint-benchmark = "fingerprint_benchmark.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
